--- a/.github/workflows/go-ci.yml
+++ b/.github/workflows/go-ci.yml
@@ -31,7 +31,7 @@ jobs:
       - name: Run golangci-lint
         uses: golangci/golangci-lint-action@v4 
         with:
-            version: latest
+            version: v1.54.2
 
       - name: Build binary
         run: go build -o app .
